Fix z-index issue for character thumbnails in non-List mode

--- a/Styles/mudaeRankerStyles.css
+++ b/Styles/mudaeRankerStyles.css
@@ -505,6 +505,7 @@ button:disabled {
 
 body:not(.ListMode) .CharacterCardContainer .CharacterThumb:not(.CharacterFull) {
     position: relative;
+    z-index: 1;
 }
 
 /* 2. Float the note in the top-right corner (ONLY on unexpanded thumbnails) */
